# fwc-26

./: .env.example  .gitignore  BUILD_PLAN.md  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
data/: .gitkeep
db/: init_db.py  schema.sql
ingestion/: apif_bridge.py  client.py  fd_client.py  fixtures.py  injuries.py  odds.py  odds_client.py  run_daily.py  teams.py
model/: dixon_coles.py  predict.py  ratings.py  report.py  run_report.py  run_results.py  scoring.py  tournament.py
scripts/: backfill.py  com.eran.mundial.ingest.plist  com.eran.mundial.report.plist  com.eran.mundial.results.plist  com.eran.mundial.ui.plist  setup.sh
ui/: app.py
ui/static/: style.css
ui/templates/: base.html  day.html  history.html  settings.html  table.html  trophy.html
